<resources>
    <!-- Title -->
    <string name="app_name">ДПУ розклад</string>

    <!-- Select weekday -->
    <!--    Text -->
    <string name="select_weekday_text">Оберіть потрібний день тижня і потім нажміть на кнопку
        \"Підтвердити\". Розклад буде виводитися на день тижня, який або сьогодні, або настане.
        Тобто, обравши \"Понеділок\" у вівторок, ви отримаєте розклад на наступний понеділок.
        \nАле якщо ви бажаєте переглянути розклад за конкретний день (наприклад, за вчора), то
        оберіть варіант \"Обрати власний\" і введіть повну дату дня у вікні, яке з\'явиться.
        Якщо що, то початкова дата буде відповідати сьогоднішньому дню.
        \nФормат дати наступний: РРРР-ММ-ДД, де Р - число року, М - число місяця та Д - число дня.
    </string>

    <!-- Schedule -->
    <!--    Lesson types -->

    <string name="lesson_parentheses">(%s)</string>

    <string name="your_group">Ваша група: %s</string>
    <string name="change">Змінити</string>
    <string name="select_weekday_title">Вибір дня тижня</string>

    <string name="lesson_number">Пара %d</string>

    <string name="break_between_lessons">Перерва між парами: %d хв.</string>

    <string name="schedule_date">Розклад на %s\n(%s)</string>
    <string name="schedule_date_hint">РРРР-ММ-ДД</string>
    <string name="schedule_date_format_string">%d-%02d-%02d</string>
    <string name="there_are_no_lessons">Пар немає.</string>

    <string name="invalid_date">Помилка!</string>
    <string name="error">Помилка</string>
    <string name="date_error_message_format_string">%s\n%s</string>
    <string name="invalid_group">Виникла помилка під час отримання розкладу, а саме проблема з
        ідентифікатором вашої групи.
        \nЦе може бути через те, що на сервері були змінені ідентифікатори груп або якимось чином
        ідентифікатор змінився на вашому пристрої.
        \nТому, щоб отримувати розклад для вашої групи, вам потрібно покинути цю сторінку шляхом
        натискання на кнопку виходу зліва-зверху, або натисканням кнопки \"Назад\" на вашому
        пристрої. Потім, ви маєте \"змінити\" вашу групу. Насправді, ви просто вкажете ту ж саму
        групу, але оновите ідентифікатор, який був збережений у вас на пристрої, на актуальний.
    </string>

    <string name="weekday_hint">День:</string>
    <string name="loading_page_text">Розклад занять в\nДержавному податковому університеті</string>
    <string name="loading_text">Почекайте будь-ласка, йде перевірка даних…</string>
    <string name="app_logo_description">Логотип університету</string>
    <string name="welcome">Вітаю</string>
    <string name="welcome_text">Цей додаток було створено для того, щоб студенти Державного
        податкового університету мали можливіть без будь-якої авторизаціі дізнатися розклад для
        своєї групи лише в 1-3 кліки.
        \nАле так як груп багато, API коледжу не дає можливості
        відразу обрати потріну групу та ви щойно вперше запустили цей додаток, то ми покроково
        будемо звужувати кількість груп і потім оберемо вашу групу.
        \n
        \nКроки будуть наступні:
        \n- вказання вашої структури;
        \n- вказання вашого факультету;
        \n- вказання вашого курсу;
        \n- вибір вашої групи;
        \n- підтвердження обраних даних.
        \n
        \nЯкщо ви готові, то натисніть на кнопку \"Далі\" і розпочнімо!</string>

    <string name="start">Почати</string>
    <string name="next">Далі</string>
    <string name="confirm">Підтвердити</string>
    <string name="today">Сьогодні</string>
    <string name="updates">Оновлення…</string>
    <string name="end_time_of_schedule_item">До кінця %s залишилось %d хв.</string>
    <string name="of_lesson">заняття</string>
    <string name="of_break_between_lessons">перерви</string>
    <!-- Receiving data -->

    <string name="back">Назад</string>
    <string name="cancel">Скасувати</string>

    <string name="structure_title">Вибір структури</string>
    <string name="faculty_title">Вибір факультету</string>
    <string name="course_title">Вибір курсу</string>
    <string name="group_title">Вибір групи</string>
    <string name="confirm_data_title">Перевірка даних</string>
    <string name="want_change_group_title">Зміна групи</string>

    <string name="structure_label">Структура:</string>
    <string name="faculty_label">Факультет:</string>
    <string name="course_label">Курс:</string>
    <string name="group_label">Група:</string>
    <!--<![CDATA[<b></b>]]>-->
    <string name="structure_text">Почнімо з вибору структури. Я думаю, що ваша структура скоріше
        за все - це Державний податковий університет. Але дочекайтеся завантаження даних,
        перевірте, чи вказано саме Державний податковий університет (або просто ДПУ), і потім
        натискайте на кнопку \"Далі\"</string>
    <string name="faculty_text">Чудово! Ви обрали структуру <![CDATA[<b>%s</b>]]>.
        <![CDATA[<br>]]>Тепер, після завантаження даних, оберіть ваш факультет. Наприклад, якщо ви навчаєтесь
        на спеціальності \"Комп\'ютерні науки\", то ваш факультет
        \"Фінанси та цифрові технології\". Але через особливості API університету, він може
        скоротитися до \"Ф-тет ФтаЦТ\". Тому не лякайтесь простого набору букв, а лише порівнюйте
        факультети, що в списку, з вашим, і обирайте потрібний.
        <![CDATA[<br>]]>Після успішного вибору вашого факультету, натискайте на кнопку \"Далі\".
    </string>
    <string name="course_text">Чудово! Ви обрали структуру <![CDATA[<b>%s</b>]]> та факультет
        <![CDATA[<b>%s</b>]]>.
        <![CDATA[<br>]]>Тепер потрібно обрати на якому курсі ви навчаєтесь. Дочекайтеся завантаження даних,
        обирайте ваш курс і натискайте на кнопку \"Далі\".
    </string>
    <string name="group_text">Чудово! Ми майже закінчили. Ви обрали структуру
        <![CDATA[<b>%s</b>]]>, факультет <![CDATA[<b>%s</b>]]> та <![CDATA[<b>%s</b>]]> курс.
        <![CDATA[<br>]]>Тепер потрібно обрати вашу групу. Як і в минулих кроках, дочекайтеся завершення
        завантаження даних і потім обирайте вашу групу. Після цього натискайте на кнопку \"Далі\"
        і перевіряйте, чи все правильно ви вказали.
    </string>
    <string name="confirm_data_text">Вітаю! Ви вказали все, що потрібно, і обрали вашу групу:
        <![CDATA[<b>%s</b>]]>.
        <![CDATA[<br>]]>
        <![CDATA[<br>]]>Якщо все правильно, то натисніть на кнопку \"Підтвердити\" і ви потрапите на сторінку з
        вибором розкладу для вашої групи. Якщо буде потрібно, то ви зможете в майбутньому змініти
        вашу групу.
        <![CDATA[<br>]]>
        <![CDATA[<br>]]>Але якщо якісь дані не сходяться, то натисніть на кнопку \"Назад\" і змініть те, що було
        вказано неправильно.
    </string>
    <string name="data_changed_text">Ви, звісно, хотіли подивитися розклад, але так вийшло, що на
        сервері дані змінилися і ваша група (або просто її ідентифікатор) тепер відрізняється від
        того, що збережено у вас на пристрої.
        \n
        \nТому вам знову потрібно пройти ті ж самі кроки, які ви проходили при вітані. Давайте я
        вам їх нагадаю:
        \n
        \n- вказання вашої структури;
        \n- вказання вашого факультету;
        \n- вказання вашого курсу;
        \n- вибір вашої групи;
        \n- підтвердження обраних даних.
        \n
        \nЯкщо ви готові, то натисніть на кнопку \"Далі\" і розпочнімо!
    </string>
    <string name="want_change_group_text">Якщо ви хочете змінити групу, вам потрібно зробити всі
        ті ж самі кроки, що й при вітанні. Давайте я вам їх нагадаю:
        \n
        \n- вказання вашої структури;
        \n- вказання вашого факультету;
        \n- вказання вашого курсу;
        \n- вибір вашої групи;
        \n- підтвердження обраних даних.
        \n
        \nЯкщо ви готові, то натисніть на кнопку \"Далі\" і розпочнімо, а якщо передумали, то
        натисніть на кнопку \"Скасувати\".
    </string>
    <string name="title_receiving_data">Receiving data</string>
    <string name="schedule_date_text_hint">Дата власного дня:</string>
</resources>